# cubesat-sim

./: .gitignore  CLAUDE.md  EMERGENT_BEHAVIORS.md  LICENSE  PROJECT_REVIEW.md  README.md  pyproject.toml
backend/comms-cpp/: Makefile  main.cpp
backend/eps-c/: Makefile
backend/obc-c/: main.c
c/eps/: eps  main.c
c/obc/: Makefile  main.c
cpp/comms/: main.cpp
examples/: campaign.py  phase0_demo.py  phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  phase5_demo.py  phase6_link_demo.py
rust/adcs/: Cargo.toml
rust/adcs/src/: main.rs
src/cubesat_sim/: __init__.py  ccsds.py  dashboard.py  faults.py  linkdump.py  live.py  mission.py  montecarlo.py
src/cubesat_sim/environment/: __init__.py  groundstation.py  magfield.py  orbit.py  sun.py
src/cubesat_sim/frontend/: __init__.py  coastline.py  dashboard.py  live.py
src/cubesat_sim/ground/: __init__.py  station.py
src/cubesat_sim/kernel/: bus.py  clock.py  component.py  recorder.py  remote.py  rng.py  simulation.py
src/cubesat_sim/physics/: __init__.py  attitude.py  power.py  spacecraft.py  thermal.py
tests/: conftest.py  test_attitude.py  test_bridge.py  test_bus.py  test_ccsds.py  test_clock.py  test_dashboard.py  test_eps_obc.py  test_faults.py  test_fdir.py  test_groundstation.py  test_housekeeping.py  test_link.py  test_live.py  test_montecarlo.py  test_orbit.py  test_phase1_integration.py  test_phase2_integration.py  test_phase4_integration.py  test_power.py  test_recorder.py  test_remote_eps.py  test_remote_obc.py  test_rng.py  test_rust_adcs.py  test_simulation.py  test_thermal.py
(+8 files in other folders)
