[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubesat-sim"
version = "0.1.0"
description = "A cyber-physical CubeSat simulator focused on emergent behavior"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cubesat_sim.frontend" = ["js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
